kubernette/nginx/nginx-deployment2.yaml
## ** nginx deployement
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep-2
spec:
  selector:
    matchLabels:
      app: nginx-pod-2
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-pod-2
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        ports:
        - containerPort: 80
          name: nginx-pod-port
