kubernette/nginx/nginx-service-ingress.yaml
## ** create nginx ingress service
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myingress
spec:
  defaultBackend:
    service:
      name: nginx-svc
      port:
        number: 80
  rules:
  - host: "myapps.com"
    http:
      paths:
      - pathType: Prefix
        path: "/nginx"
        backend:
          serviceName: nginx-svc
          servicePort: 80
